--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,5 +32,12 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:16.0.1'
     implementation 'de.hdodenhof:circleimageview:2.2.0'//for circle image view
 
+    implementation 'com.google.firebase:firebase-storage:16.0.1'//for firebase storage for saving image
+    implementation 'com.google.firebase:firebase-auth:16.0.1'
+
+
+    implementation 'com.github.bumptech.glide:glide:4.7.1'
+    // Glide v4 uses this new annotation processor -- see https://bumptech.github.io/glide/doc/generatedapi.html
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
 }
 apply plugin: 'com.google.gms.google-services'
